@@ -5,6 +5,8 @@
 	- try to mouse focus only when mouse actually moves to another window
 	- prevent focusing taskbar with mouse focus
 	- use locale strings in 'icewm-menu-gnome2'
+	- also search for .png icons when only basename is specified
+	  (Manuel Carrasco)
 
 1.2.27: 2006-08-06
 	- Danish translation (by Ole Carlsen)
